[package]
name = "custome_service"
version = "0.1.0"
authors = ["bindo123"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
gotham = { path = "../gotham" }
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }