[package]
name = "diesel"
version = "0.1.0"
authors = ["bindo123"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham = { path = "../gotham" }
diesel = { version = "1.4", features = ["sqlite", "extras"] }
diesel_migrations = { version = "1.4", features = ["sqlite"] }