[package]
name = "hello_world_until"
version = "0.1.0"
authors = ["bindo123"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham = { path ="../gotham" }
futures = "0.3.1"
tokio = { version = "1.0", features = ["full"] }
mime = "0.3"

[target.'cfg(unix)'.dev-dependencies]
nix = "0.20"